# distribute-by-locked-vote-weight

./: .gitignore  Anchor.toml  README.md
.github/workflows/: ci-soteria.yml
program/: Cargo.toml
program/src/: error.rs  lib.rs
program/src/events/: mod.rs
program/src/instructions/: claim.rs  create_distribution.rs  create_participant.rs  log_info.rs  mod.rs  set_time_offset.rs  start_claim_phase.rs  update_participant.rs
program/src/state/: distribution.rs  mod.rs  participant.rs
program/tests/: test_basic.rs  test_full_lifecycle.rs  test_update_weight.rs
program/tests/program_test/: client.rs  distribute_client.rs  mod.rs  solana.rs  vsr_client.rs
