[package]
name = "distribute-by-locked-vote-weight"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "distribute_by_locked_vote_weight"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []
test-bpf = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = { version = "0.20.1" }
solana-program = "1.9.5"
static_assertions = "1.1"
voter-stake-registry = { git = "https://github.com/blockworks-foundation/voter-stake-registry.git", branch = "master", features = ["cpi"] }

[dev-dependencies]
solana-sdk = "1.9.5"
solana-program-test = "1.9.5"
solana-logger = "1.9.5"
spl-token = { version = "^3.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^1.0.3", features = ["no-entrypoint"] }
bytemuck = "^1.7.2"
serde = "^1.0"
bincode = "^1.3.1"
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"
